# thai-erpnext-express

./: MANIFEST.in  README.md  pyproject.toml  setup.py
thai_express/: __init__.py  hooks.py  modules.txt
thai_express/config/: desktop.py  docs.py
thai_express/expenses/doctype/expense/: expense.py
thai_express/expenses/doctype/expense_attachment/: expense_attachment.py
thai_express/expenses/workspace/thai_express/: thai_express.json
thai_express/public/js/: expenses.bundle.js
thai_express/setup/: install.py  uninstall.py
thai_express/thai_express/doctype/expense/: expense.js  expense.json  expense.py  expense_list.js
thai_express/thai_express/doctype/expense_account/: expense_account.json  expense_account.py
thai_express/thai_express/doctype/expense_attachment/: expense_attachment.json
thai_express/thai_express/doctype/expense_item/: expense_item.js  expense_item.json  expense_item.py  expense_item_list.js
thai_express/thai_express/doctype/expense_type/: expense_type.js  expense_type.json  expense_type.py  expense_type_list.js  expense_type_tree.js
thai_express/thai_express/doctype/expenses_entry/: expenses_entry.js  expenses_entry.json  expenses_entry.py  expenses_entry_list.js
thai_express/thai_express/doctype/expenses_entry_details/: expenses_entry_details.json  expenses_entry_details.py
thai_express/utils/: __init__.py  account.py  attachment.py  common.py  doctypes.py  entry.py  expense.py  item.py  journal.py  meta.py  reports.py  request.py  search.py  settings.py  type.py  update.py
(+19 files in other folders)
